<resources>
    <string name="app_name">Jawline Exercises</string>
    <string name="parent_company_name">ByteZapTech</string>
    <string name="existing_account_sign_in">existing account? <font color="#7676FF">Sign in</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jawline_exercises_for_a_sharper_more_defined_and_confident_look">Jawline exercises for a sharper, more defined and confident look.</string>
    <string name="_120_days_jawline_nchallenge">120 Days Jawline\nChallenge</string>
    <string name="_0_120_finished">0/120 Finished</string>
    <string name="_30_days_jawline_nchallenge">30 Days Jawline\nChallenge</string>
    <string name="the_quick_challene_for_quick_results">The quick challenge for quick results</string>
    <string name="_0_30_finished">0/30 Finished</string>
    <string name="_60_days_jawline_nchallenge">60 Days Jawline\nChallenge</string>
    <string name="the_challenge_for_committed_athletes_and_fitness_enthusiasts">The challenge for committed athletes and fitness enthusiasts.</string>
    <string name="_0_60_finished">0/60 Finished</string>
    <string name="days_completed">Days Completed</string>
    <string name="total_days">Total Days</string>
    <string name="calendar">Calendar</string>
    <string name="sign_out">Sign Out</string>
    <string name="membership_status">Membership Status</string>
    <string name="profile">Profile</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="donate">Donate</string>
    <string name="empower_change_with_a_tap">Empower Change with a Tap</string>
    <string name="language">Language</string>
    <string name="reminders">Reminders</string>
    <string name="rest_duration">Rest Duration</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="articles">Articles</string>
    <string name="select_language">Select Language</string>
    <string name="ads_test_app_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rate_us">Rate Us</string>
</resources>