<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_16dp"
                tools:context=".ui.settings.ProfileDetailsFragment">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/up_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_iv"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:contentDescription="@null"
                        android:paddingHorizontal="@dimen/_16dp"
                        tools:src="@drawable/user_profile" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/rectangle_shape"
                        android:backgroundTint="@color/dark_grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/_16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/membership_status"
                            android:textColor="@color/dark_grey"
                            android:theme="@style/textSemiBoldTheme" />

                        <TextView
                            android:id="@+id/plan_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/textSemiBoldTheme"
                            tools:text="Free" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/_32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Dushyant"
                        android:id="@+id/name_tv"
                        android:textSize="@dimen/_32sp"
                        android:theme="@style/textSemiBoldTheme" />

                    <TextView
                        android:id="@+id/email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/dark_grey"
                        android:theme="@style/textSemiBoldTheme"
                        tools:text="abcde@gmail.com" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32dp"
                    android:background="@drawable/rectangle_shape"
                    android:backgroundTint="@color/light_grey"
                    android:padding="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rectangle_shape"
                        android:backgroundTint="@color/white"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/edit_tv"
                            android:paddingVertical="@dimen/_24dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/right_arrow_ic"
                            android:drawableTint="@color/light_grey"
                            android:letterSpacing="0.1"
                            android:paddingHorizontal="@dimen/_24dp"
                            android:text="@string/edit"
                            android:textColor="@color/text_black"
                            android:textSize="16sp"
                            android:theme="@style/textRegularTheme" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@drawable/rectangle_shape"
                            android:backgroundTint="@color/light_grey" />

                        <TextView
                            android:id="@+id/del_acc_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="@dimen/_24dp"
                            android:drawableEnd="@drawable/right_arrow_ic"
                            android:drawableTint="@color/light_grey"
                            android:letterSpacing="0.1"
                            android:paddingHorizontal="@dimen/_24dp"
                            android:text="@string/delete_account"
                            android:textColor="@color/text_black"
                            android:textSize="16sp"
                            android:theme="@style/textRegularTheme" />

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/sign_out_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:paddingVertical="12dp"
                android:text="@string/sign_out"
                android:paddingHorizontal="@dimen/_16dp"
                android:background="@drawable/stroke_shape"
                android:drawableStart="@drawable/sign_out_ic"
                android:drawableTint="@color/color_primary"
                android:drawablePadding="@dimen/_8dp"
                android:textSize="20sp"
                android:theme="@style/textSemiBoldTheme" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>