<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.ThirtyDaysFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                app:cardBackgroundColor="@color/dark_red"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_margin="@dimen/_16dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/rectangle_shape"
                        android:backgroundTint="@color/white"
                        android:padding="1dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/iv_profile"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/premium" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8dp"
                            android:layout_weight="1"
                            android:letterSpacing="0.3"
                            android:lineHeight="24dp"
                            android:text="@string/_120_days_jawline_nchallenge"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:theme="@style/textSemiBoldTheme" />

                        <TextView
                            android:id="@+id/tv_sub"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_16dp"
                            android:layout_weight="1"
                            android:letterSpacing="0.1"
                            android:lineHeight="20dp"
                            android:text="@string/jawline_exercises_for_a_sharper_more_defined_and_confident_look"
                            android:textColor="@color/white"
                            android:theme="@style/textRegularTheme" />

                        <TextView
                            android:id="@+id/tv_result_head"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8dp"
                            android:layout_marginTop="@dimen/_16dp"
                            android:layout_weight="1"
                            android:letterSpacing="0.1"
                            android:lineHeight="20dp"
                            android:text="@string/_0_120_finished"
                            android:textColor="@color/white"
                            android:theme="@style/textRegularTheme" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_16dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1"
                                android:textAllCaps="true"
                                android:textColor="@color/dark_grey"
                                android:textSize="12sp"
                                android:theme="@style/textSemiBoldTheme" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_16dp"
                                android:text="2"
                                android:textAllCaps="true"
                                android:textColor="@color/dark_grey"
                                android:textSize="12sp"
                                android:theme="@style/textSemiBoldTheme" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_16dp"
                                android:text="3"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_24sp"
                                android:theme="@style/textSemiBoldTheme" />

                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/thirty_days_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_16dp"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>